# yarnn

./: .drone.yml  Cargo.toml  LICENSE  README.md
datasets/: download.sh
src/: backend.rs  conv_model.rs  dense_model.rs  layer.rs  macros.rs  main.rs  network.rs  optimizer.rs  params.rs  tensor.rs  vgg_model.rs
src/backends/: conv2d.rs  gemm.rs  mod.rs  native.rs  pool2d.rs
src/layers/: avgpool2d.rs  chain.rs  conv2d.rs  flatten.rs  linear.rs  maxpool2d.rs  mod.rs  relu.rs  sequential.rs  sigmoid.rs  softmax.rs  zeropadding2d.rs
src/losses/: cross_entropy.rs  mse.rs
src/optimizers/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
yarnn/: Cargo.toml
yarnn-examples/mnist/: Cargo.toml
yarnn-examples/mnist-blas/: Cargo.toml
yarnn-examples/mnist-wasm/: .gitignore  Cargo.toml  index.js
yarnn-examples/mnist/src/: main.rs
yarnn-examples/vgg16-demo/: Cargo.toml
yarnn-examples/vgg16-demo/src/: main.rs
yarnn-models/mnist/: Cargo.toml
yarnn-models/mnist/src/: lib.rs
yarnn-models/vgg16/: Cargo.toml
yarnn-models/vgg16/src/: lib.rs
yarnn-native-blas/: Cargo.toml  build.rs
yarnn-native-blas/src/: img2col.rs  lib.rs
yarnn/src/: backend.rs  layer.rs  lib.rs  loss.rs  macros.rs  model.rs  optimizer.rs  params.rs  tensor.rs
yarnn/src/layers/: avgpool2d.rs  chain.rs  conv2d.rs  flatten.rs  linear.rs  maxpool2d.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  zeropadding2d.rs
yarnn/src/losses/: cross_entropy.rs  mod.rs  mse.rs
yarnn/src/native/: conv2d.rs  gemm.rs  mod.rs  pool2d.rs
yarnn/src/native/conv2d/: kernel_3x3.rs  kernel_5x5.rs  mod.rs
yarnn/src/optimizers/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
