[workspace]

members = [
    "yarnn",
    "yarnn-native-blas",
    
    "yarnn-models/mnist",
    "yarnn-models/vgg16",
    
    "yarnn-examples/mnist",
    "yarnn-examples/mnist-wasm",
    # "yarnn-examples/mnist-blas",
    "yarnn-examples/vgg16-demo",
]

[patch.crates-io]
yarnn = { path = './yarnn' }
yarnn-native-blas = { path = './yarnn-native-blas' }
yarnn-model-mnist = { path = './yarnn-models/mnist' }
yarnn-model-vgg16 = { path = './yarnn-models/vgg16' }

